--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "delay": "^5.0.0",
     "eventsource-parser": "^0.0.5",
     "expiry-map": "^2.0.0",
+    "fetch-socks": "^1.2.0",
     "html-to-md": "^0.8.3",
     "p-timeout": "^6.0.0",
     "puppeteer-extra": "^3.3.4",
@@ -47,6 +48,7 @@
     "random": "^4.1.0",
     "remark": "^14.0.2",
     "strip-markdown": "^5.0.0",
+    "undici": "^5.14.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
